Update paths for colab

--- a/01_Registration.ipynb
+++ b/01_Registration.ipynb
@@ -169,7 +169,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "imgfolder = \"D:/Dropbox/Work/Transfer/ColabData/HNSCC_data/downsampledCTs/\"#\"/content/downsampledCTs/\"\n",
+    "imgfolder = \"/content/HNSCC_data/downsampledCTs/\"\n",
     "dataDir = imgfolder\n",
     "doseDir = imgfolder + \"../niftyDoses/\"\n",
     "nrrOutput = imgfolder + \"../warpedImgs/\"\n",
