--- a/02_BinaryMining.ipynb
+++ b/02_BinaryMining.ipynb
@@ -113,7 +113,7 @@
    "outputs": [],
    "source": [
     "## Load the clinical data CSV\n",
-    "clinicalDataPath = \"D:/Dropbox/Work/Transfer/ColabData/HNSCC_data/clinicalData.csv\"#/data/clinicalData.csv\"\n",
+    "clinicalDataPath = \"/content/HNSCC_data/clinicalData.csv\"\n",
     "\n",
     "clinicalData = pd.read_csv(clinicalDataPath)\n",
     "\n"
@@ -298,7 +298,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dosesPath = \"D:/Dropbox/Work/Transfer/ColabData/HNSCC_data/warpedDoses/\"# \"/content/registeredDoses\"\n",
+    "dosesPath = \"/content/HNSCC_data/warpedDoses/\"\n",
     "availableDoses = [\"HNSCC-01-{0}\".format(a.split('.')[0]) for a in os.listdir(dosesPath)]\n",
     "\n",
     "availablePatientsMask = selectedPatients['ID'].isin(availableDoses)\n",
