--- a/03_ContinousMining.ipynb
+++ b/03_ContinousMining.ipynb
@@ -93,7 +93,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clinicalDataPath = \"D:/Dropbox/Work/Transfer/ColabData/HNSCC_data/clinicalData.csv\" #\"/data/clinicalData.csv\"\n",
+    "clinicalDataPath = \"/content/HNSCC_data/clinicalData.csv\"\n",
     "\n",
     "clinicalData = pd.read_csv(clinicalDataPath)\n",
     "\n",
@@ -111,7 +111,7 @@
     "    return BED\n",
     "\n",
     "\n",
-    "dosesPath = \"D:/Dropbox/Work/Transfer/ColabData/HNSCC_data/warpedDoses/\"# \"/data/registeredDoses\"\n",
+    "dosesPath = \"/content/HNSCC_data/warpedDoses/\"\n",
     "availableDoses = [\"HNSCC-01-{0}\".format(a.split('.')[0]) for a in os.listdir(dosesPath)]\n",
     "\n",
     "availablePatientsMask = selectedPatients['ID'].isin(availableDoses)\n",
@@ -228,14 +228,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mask = sitk.GetArrayFromImage(sitk.ReadImage(\"D:/Dropbox/Work/Transfer/ColabData/HNSCC_data/0002_mask.nii\")).astype(np.int16)\n",
+    "mask = sitk.GetArrayFromImage(sitk.ReadImage(\"/content/HNSCC_data/0002_mask.nii\")).astype(np.int16)\n",
     "\n",
     "import time\n",
     "start = time.time()\n",
     "rhoMap = calculateRho(doseArray, weightLoss, mask=mask)\n",
     "print(time.time() - start)\n",
     "\n",
-    "referenceAnatomy = sitk.GetArrayFromImage(sitk.ReadImage(\"D:/Dropbox/Work/Transfer/ColabData/HNSCC_data/downsampledCTs/0002.nii\"))\n",
+    "referenceAnatomy = sitk.GetArrayFromImage(sitk.ReadImage(\"/content/HNSCC_data/downsampledCTs/0002.nii\"))\n",
     "\n",
     "fig = plt.figure(figsize=(10,10))\n",
     "anatomy = plt.imshow(referenceAnatomy[::-1,64,...], cmap='Greys_r')\n",
