--- a/01_Registration.ipynb
+++ b/01_Registration.ipynb
@@ -71,7 +71,7 @@
     "from ipywidgets import interact, fixed  #for plotting the registered image\n",
     "from numpy import sign, zeros, max\n",
     "\n",
-    "\n",
+    "runningInColab = True\n",
     "# ## Make the notebook use full width of display\n",
     "# from IPython.core.display import display, HTML\n",
     "# display(HTML(\"<style>.container { width:100% !important; }</style>\"))"
@@ -91,28 +91,39 @@
    "outputs": [],
    "source": [
     "def start_plot():\n",
-    "    global metric_values, optimiser_iterations, fig, ax\n",
+    "    global metric_values, optimiser_iterations\n",
     "    optimiser_iterations = []\n",
     "    metric_values = []\n",
-    "    fig = plt.figure()\n",
-    "    ax = fig.add_subplot(111)\n",
-    "    plt.ion()\n",
-    "    fig.show()\n",
-    "    fig.canvas.draw()\n",
-    "    \n",
+    "    if runningInColab == False:\n",
+    "        global fig, ax\n",
+    "        fig = plt.figure()\n",
+    "        ax = fig.add_subplot(111)\n",
+    "        plt.ion()\n",
+    "        fig.show()\n",
+    "        fig.canvas.draw()\n",
     "    \n",
     "def plot_values(registration_method):\n",
-    "    global metric_values, optimiser_iterations, fig, ax\n",
+    "    global metric_values, optimiser_iterations\n",
     "    optimiser_iterations.append(registration_method.GetOptimizerIteration())\n",
     "    metric_values.append(registration_method.GetMetricValue())                                       \n",
     "    # Clear and plot the similarity metric values\n",
+    "    if runningInColab == False:\n",
+    "        global fig, ax\n",
+    "    else:\n",
+    "        fig = plt.figure()\n",
+    "        ax = fig.add_subplot(111)\n",
+    "        clear_output()\n",
+    "        \n",
     "    ax.clear()\n",
     "    #ax.plot(optimiser_iterations, metric_values, 'b.')\n",
     "    ax.plot( metric_values, 'b.')\n",
     "    plt.xlabel('Iteration Number',fontsize=12)\n",
     "    plt.ylabel('Metric Value',fontsize=12)\n",
     "    ax.set_ylim([-1, 0])\n",
-    "    fig.canvas.draw()\n",
+    "    if( runningInColab ):\n",
+    "        plt.show();\n",
+    "    else:\n",
+    "        fig.canvas.draw()\n",
     "    \n",
     "def command_multires_iterations():\n",
     "    print(\"    > ---- Resolution change ----\")\n"
@@ -142,18 +153,19 @@
     "    rgbimg[...,1]=flo/max(ref);\n",
     "    rgbimg[...,2]=ref/max(ref);\n",
     "    \n",
-    "    figi = plt.figure()\n",
+    "    figi = plt.figure(num=None, figsize=(12, 4), dpi=80)\n",
     "    axi = figi.add_subplot(131)\n",
-    "    axi.imshow(rgbimg[:,64,:,:])\n",
-    "    axi.axis('off')\n",
+    "    axi.imshow(rgbimg[:,64,:,:]) # change 64 to show a different coronal slice\n",
+    "    axi.axis('off'); axi.invert_yaxis()\n",
     "    axi = figi.add_subplot(132)\n",
-    "    axi.imshow(rgbimg[50,:,:,:])\n",
+    "    axi.imshow(rgbimg[50,:,:,:]) # change 50 to show a different axial slice\n",
     "    axi.axis('off')\n",
     "    axi = figi.add_subplot(133)\n",
-    "    axi.imshow(rgbimg[:,:,64,:])\n",
-    "    axi.axis('off')\n",
-    "    plt.ion()\n",
-    "    figi.show()\n"
+    "    axi.imshow(rgbimg[:,:,64,:]) # change 64 to show a different saggittal slice\n",
+    "    axi.axis('off'); axi.invert_yaxis()\n",
+    "    if runningInColab == False:\n",
+    "        plt.ion()\n",
+    "    figi.show()"
    ]
   },
   {
@@ -191,7 +203,9 @@
     "-  The **optimiser**: we chose regular step grandient descent.  Change the values of the arguments to see how fast/slow the optimiser converges (if it does!)\n",
     "-  The **transform**:  we chose the 'Similarity 3D Transform'.  This transforms allows translation, rotation and scaling. The choice of the transform defines whether the registation is affine, rigid or non-rigid!  Notice we are optimising 7 parameters, 3 translations, 3 rotations and scaling.\n",
     "\n",
-    "This function returns the transform parameters that minimised the metric the most!  \n"
+    "This function returns the transform parameters that minimised the metric the most!\n",
+    "\n",
+    "Check here for extra info: https://simpleitk.readthedocs.io/en/master/registrationOverview.html\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -209,26 +223,20 @@
     "    R.SetMetricFixedMask(referenceMask)\n",
     "    \n",
     "    R.SetOptimizerAsRegularStepGradientDescent(learningRate=2.0,\n",
-    "                                               minStep=1e-4,\n",
-    "                                               numberOfIterations=500,\n",
-    "                                               gradientMagnitudeTolerance=1e-3,\n",
+    "                                               minStep=1e-2,\n",
+    "                                               numberOfIterations=200,\n",
+    "                                               gradientMagnitudeTolerance=1e-2,\n",
     "                                               maximumStepSizeInPhysicalUnits = 10)\n",
     "    R.SetOptimizerScalesFromIndexShift()\n",
-    "\n",
     "    tx = sitk.CenteredTransformInitializer(referenceImage, floating, sitk.Similarity3DTransform() )\n",
     "    print(\"Initial Number of Parameters: {0}\".format(tx.GetNumberOfParameters()))\n",
-    "\n",
     "    R.SetInitialTransform(tx)\n",
-    "\n",
     "    R.AddCommand(sitk.sitkIterationEvent, lambda: plot_values(R))\n",
-    "\n",
     "    outTx = R.Execute(referenceImage, floatingImage)\n",
-    "\n",
     "    if printInfo:\n",
     "        print(\"    >> Optimizer stop condition: {0}\".format(R.GetOptimizerStopConditionDescription()))\n",
     "        print(\"    >> Iteration: {0}\".format(R.GetOptimizerIteration()))\n",
     "        print(\"    >> Metric value: {0}\".format(R.GetMetricValue()))\n",
-    "\n",
     "    return outTx"
    ]
   },
@@ -240,14 +248,17 @@
     "Similarly to the affine registration, all elements are defined in this function.  Additionally, we allow for a multi-resolution approach to speed-up and improve the registration results.\n",
     "\n",
     "The elements include:\n",
-    "-  The **metric**: This element is used to determine how similar two images are.  In this example, we will use the (negative) normalized cross corelation.\n",
-    "-  The **interpolator**: we use a linear interpolator.  A good balance between speed and performance. \n",
-    "-  The **reference mask**: to filter the voxels in the image that matter for the registation.  The mask we will use was semi-automatically created, and focuses on the head and neck area, ignoring the shoulders and thorax.\n",
-    "-  The **optimiser**: we chose a different optimiser to allow the many parameters be optimised in a decent time.  We chose the Limited memory Broyden Fletcher Goldfarb Shannon minimization (LBFGSB).\n",
-    "-  The **transform**:  we chose the BSpline transform. It uses a sparse set of control points to control a free form deformation. This choice of the transform defines the registation to be non-rigid!  Notice we are optimising many more parameters than the affine registration... How many?\n",
-    "- The **multi-resolution scheme**: it is defined by the ShrinkFactorPerLevel and SmoothingSigmaPerLevel.  The size of the argument array defines how many levels are to be used. Note that this only happens if the argument UseMultiResolution is set to true.  Could you add multi-resolution to the affine registration?\n",
+    "-  The **metric** [same as in affine]: This element is used to determine how similar two images are.  We will use the (negative) normalized cross corelation again.\n",
+    "-  The **interpolator** [same as in affine]: we use a linear interpolator.  A good balance between speed and performance. \n",
+    "-  The **reference mask** [same as in affine]: to filter the voxels in the image that matter for the registation.  The mask we will use was semi-automatically created, and focuses on the head and neck area, ignoring the shoulders and thorax.\n",
     "\n",
-    "This function returns the transform parameters that minimised the metric the most!  "
+    "-  The **optimiser**: we chose a different optimiser to allow the many parameters be optimised in a decent time.  Try the Limited memory Broyden Fletcher Goldfarb Shannon minimization (LBFGSB).\n",
+    "-  The **transform**:  we chose the BSpline transform. It uses a sparse set of control points to control a free form deformation. This choice of the transform defines the registation to be non-rigid!  Notice we are optimising many more parameters than the affine registration... How many?\n",
+    "- The **multi-resolution scheme**: Multiresolution constructs an 'image pyramid', were each level is smaller than the next.  This helps the registration evade local minima, and allows it to run faster (at least in theory) by allowing the optimiser converge faster. It is defined by the ShrinkFactorPerLevel and SmoothingSigmaPerLevel.  The size of the argument array defines how many levels are to be used. Note that this only happens if the argument UseMultiResolution is set to true.\n",
+    "\n",
+    "This function returns the transform parameters that minimised the metric the most!  \n",
+    "\n",
+    "Check here for extra info: https://simpleitk.readthedocs.io/en/master/registrationOverview.html"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -263,26 +274,25 @@
     "    R.SetMetricAsCorrelation()\n",
     "    R.SetInterpolator(sitk.sitkLinear)\n",
     "    R.SetMetricFixedMask(referenceMask)\n",
-    "        \n",
-    "    R.SetOptimizerAsGradientDescentLineSearch(5.0,\n",
-    "                                          100,\n",
+    "    \n",
+    "\n",
+    "    R.SetOptimizerAsGradientDescentLineSearch(5.0, 100,\n",
     "                                          convergenceMinimumValue=1e-4,\n",
     "                                          convergenceWindowSize=5)\n",
-    "    # try a different optimiser?\n",
-    "    #R.SetOptimizerAsLBFGSB(gradientConvergenceTolerance=1e-5,\n",
+    "    # try a simpler optimiser?\n",
+    "    #R.SetOptimizerAsLBFGSB(gradientConvergenceTolerance=1e-3,\n",
     "    #                   numberOfIterations=100,\n",
     "    #                   maximumNumberOfCorrections=5,\n",
-    "    #                   maximumNumberOfFunctionEvaluations=200,\n",
+    "    #                   maximumNumberOfFunctionEvaluations=1000,\n",
     "    #                   costFunctionConvergenceFactor=1e+7)\n",
+    "\n",
     "    \n",
     "    transformDomainMeshSize=[8]*floatingImage.GetDimension()\n",
     "    tx = sitk.BSplineTransformInitializer(referenceImage, transformDomainMeshSize )\n",
-    "    \n",
     "    print(\"Initial Number of Parameters: {0}\".format(tx.GetNumberOfParameters()))\n",
     "    R.SetInitialTransform(tx, True)\n",
-    "    \n",
     "    R.AddCommand(sitk.sitkIterationEvent, lambda: plot_values(R))\n",
-    "    \n",
+    "\n",
     "    if useMultiResolution:\n",
     "        R.SetShrinkFactorsPerLevel([8,4,2,1])\n",
     "        R.SetSmoothingSigmasPerLevel([4,2,1,0])\n",
