Fix wget output filename

--- a/02_BinaryMining.ipynb
+++ b/02_BinaryMining.ipynb
@@ -55,7 +55,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!wget https://www.dropbox.com/s/msb4uiq8rw79rqe/HNSCC_data.zip?dl=0\n",
+    "!wget https://www.dropbox.com/s/msb4uiq8rw79rqe/HNSCC_data.zip?dl=0 -O ./HNSCC_data.zip\n",
     "!unzip HNSCC_data.zip\n",
     "!rm HNSCC_data.zip"
    ]
