Fix missng import and switch to inline matplotlib
Interactive plotting is broken in colab, need to look for a different solution...

--- a/01_Registration.ipynb
+++ b/01_Registration.ipynb
@@ -62,7 +62,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib notebook\n",
+    "%matplotlib inline\n",
     "\n",
     "import SimpleITK as sitk        # for the registration\n",
     "import os                       # for file management\n",
@@ -70,6 +70,7 @@
     "import matplotlib.pyplot as plt # for plotting the metric\n",
     "from ipywidgets import interact, fixed  #for plotting the registered image\n",
     "from numpy import sign, zeros, max\n",
+    "from IPython.display import clear_output\n",
     "\n",
     "runningInColab = True\n",
     "# ## Make the notebook use full width of display\n",
